<resources>
    <string name="app_name">Software Update</string>
    <string name="check_now">Check for updates</string>
    <string name="option_settings">Settings</string>
    <string name="current_version_text">Current:</string>
    <string name="new_version_text">New version</string>
    <string name="download_progress">Progress rate:</string>
    <string name="update_now">Install now</string>
    <string name="update_later">Install later</string>
    <string name="battery_remove_title">Warning</string>
    <string name="notification_content_title">Wireless Software Update</string>
    <string name="notification_content_newversion">A new version is available.</string>
    <string name="new_version_query">Checking for updates…</string>
    <string name="no_new_version">Your device\'s software is currently up to date.</string>
    <string name="network_error">Network connection failed</string>
    <string name="unmount_sdcard">SD card error! Please ensure the SD Card is mounted.</string>
    <string name="sdcard_crash_or_unmount">There is no SD card present,  or there is not enough free space on device to complete the update.</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="cancel_download_title">Cancel</string>
    <string name="cancel_download_content">This operation will delete the downloaded file.</string>
    <string name="cancel_download_positive_btn">Yes</string>
    <string name="cancel_download_negative_btn">No</string>
    <string name="update_prompt">The device is about to restart and enter upgrade mode. The whole process will last for several minutes. Please do not do anything during this period to avoid failure of upgrade.</string>
    <string name="not_support_fota_title">Warning</string>
    <string name="not_support_version">FOTA is not supported on this device!</string>
    <string name="package_error_title">Installation Failed</string>
    <string name="package_error_message_invalid">Package error. Please check update and download again.</string>
    <string name="updateSuccessTitle">Installation Complete</string>
    <string name="updateSuccess">Your system has been updated to latest version successfully %s</string>
    <string name="package_unzip">Unzipping the package file, please do not interrupt&#8230;</string>
    <string name="package_unzip_error">Unzip error</string>
    <string name="upgrade_hint">Update Information</string>
    <string name="setting_autocheck">Automatically check for update</string>
    <string name="setting_autocheck_title">Cycle settings</string>
    <string name="setting_autocheck_hint">Set the cycle to check for update automatically</string>
    <string name="setting_autocheck_schedule1">One day</string>
    <string name="setting_autocheck_schedule2">Three days</string>
    <string name="setting_autocheck_schedule3">Weekly</string>
    <string name="setting_only_wifi">Updates via Wi-Fi only</string>
    <string name="setting_only_wifi_hint">Download update packages over Wi-Fi network only</string>
    <string name="setting_autodownload">Allow automatic download over Wi-Fi network</string>
    <string name="setting_autodownload_hint">Update packages will be downloaded automatically</string>
    <string name="setting_network_tip">No Wi-Fi connection available, please deselect the [Updates via Wi-Fi only] option and try again.</string>
    <string name="reboot">Rebooting...</string>
    <string name="option_file_select">Local updates</string>
    <string name="selected_update_zip">Selected file:&#160;</string>
    <string name="sdCard_update_tips_content"><Data><![CDATA[ <div style="font-size:13px;color:#4c4c4c"><p>1. Please make sure the selected file is official;</p>
                                <p>2. Local Update may wipe your data, please backup before updating;</p>
                                <p>3. Install the wrong update file will damage your device;</p>
                                <p>4. Click [Update now] button, your device will enter into the Recovery Mode. Please do not remove the battery and do nothing until the update has been completed.</p></div> ]]> </Data>
    </string>
    <string name="sdCard_upgrade_hint">Notice:</string>
    <string name="sdCard_upgrade_find_update_file_fail">No update files available</string>
    <string name="sdCard_upgrade_update_file_fail_prompt">Update file is not existing, please select again.</string>
    <string name="sdCard_upgrade_memory_space_not_enough">Error</string>
    <string name="sdCard_upgrade_copy_file_fail">Copy failed</string>
    <string name="sdCard_upgrade_copy_file_fail_prompt">Copy failed, please try again!</string>
    <string name="sdCard_upgrade_copying">Copying&#8230;</string>
    <string name="download_completed_text">Download complete, please click to install</string>
    <string name="empty_directory">No zip files in this folder!</string>
    <string name="sdcard_update_prompt">Your device can be bricked if you choose to install an unofficial or incompatible zip file! </string>
    <string name="export_data">Download log file</string>
    <string name="start_catch_log">Start log capture</string>
    <string name="stop_catch_log">End log capture</string>
    <string name="remind_last_time">Remind again</string>
    <string name="pop_install_schedule1">1 hour later</string>
    <string name="pop_install_schedule2">4 hours later</string>
    <string name="pop_install_schedule3">8 hours later</string>
    <string name="pop_install_remind_title">Update Reminder</string>
    <string name="pop_install_remind_content">The new version has been downloaded, please install it now.</string>
    <string name="option_exit">Exit</string>
    <string name="htmlstring_version"><![CDATA[<div style=\'font-size:16px;color:#303030;\'><span style=\'word-break:break-all\'>]]></string>
    <string name="htmlstring_version_end"><![CDATA[</span><br/>]]></string>
    <string name="htmlstring_code_head"><![CDATA[<div style=\'font-size:14px;color:#8e8e8e;\'><span style=\'word-break:break-all\'>]]></string>
    <string name="htmlstring_code_end"><![CDATA[</span><br/></div>]]></string>
    <string name="ota_notify_download_pause_content">Download has been paused, click to continue</string>
    <string name="ota_button_text_know">Ok</string>
    <string name="ota_device_rooted_content">Root has been detected, can not update the device!</string>
    <string name="ota_battery_low">The current power is less than %d%%, please charge!</string>
    <string name="ota_wifi_setting">Wi-Fi Settings</string>
    <string name="ota_no_wifi_tip">If you do not have a Wi-Fi network available, you can download the update via the mobile network by clicking the button below, but additional charges may apply.</string>
    <string name="ota_full_rom_check">Check</string>
    <string name="ota_optional_full_check">Check for full update</string>
    <string name="ota_toast_no_network">Network is not available</string>
    <string name="out_sdcard">SD card</string>
    <string name="inner_sdcard">Internal storage</string>
    <string name="match_imei">IMEI is illegal</string>
    <string name="sdcard_crash_dir_un_build">The SDCard is not available!</string>
    <string name="post_pro">%</string>
    <string name="ab_install_fail">Install fail</string>
    <string name="ab_install_success">Install successfully</string>
    <string name="updated_need_reboot">Restart the cell phone to activate the updated version</string>
    <string name="ab_isnatll_fail_reason">Reason：</string>
    <string name="ab_installing">Installing</string>
    <string name="ab_connect_fail">Connect reboot fail</string>
    <string name="ab_battery_low">The update will be installed automatically when the battery is charged to more than %1$d%%</string>
    <string name="ab_parms_illegal">Incorrect upgrade package parameter</string>
    <string name="ab_reboot_now">Restart immediately</string>
    <string name="tips_abDownOrInstall">In the downloading upgrade, do not upgrade locally at the same time</string>
    <string name="tips_abInstall">In the installation, please do not check the full package.</string>
    <string name="button_click_toast">Click too fast, Please try again later.</string>
    <string name="about_wireless_update">About Software Update</string>
    <string name="agree">AGREE</string>
    <string name="analysis">App Analysis</string>
    <string name="content">Choose to help improve your app by sharing its activity and crash-related data.</string>
    <string name="new_to_upgrade">You have a new version to install</string>
    <string name="upgrade_agreement">"Normative agreement for upgrading and installation "</string>
    <string name="upgrade_agreement_content">1. Fix bugs and stabilize FOTA performance \n2. Auto-upgrade will be enabled at night  \n3. Auto-upgrade will be enabled after three delays in installation  \n4. FOTA upgrade is a safe way to upgrade software. It is recommended that you upgrade it</string>
    <string name="shake_to_check">Shake to check</string>
    <string name="shake_to_download">Shake to download</string>
    <string name="shake_to_update">Shake to update</string>
    <string name="call_warn">Software update download will not be available during the call</string>
    <string name="guest_hint">It is Guest mode now, and Software Update is not available in this mode.</string>
    <string name="dialog_download_later_title">Set the time to download the software later</string>
    <string name="dialog_download_install_later_title">Set the time to download and install the software later.The phone will be unavaible during the software installation</string>
    <string name="dialog_download_success_title">Software downloaded</string>
    <string name="dialog_install_later">Set the time to install the software later.The phone will be unavaible during the software installation</string>
    <string name="notify_content">Do you want to continue with the software download/install now or postpone it and reset the time?</string>
    <string name="notify_positive">Continue</string>
    <string name="notify_negative">Reset Time</string>
    <string name="btn_download">Download now</string>
    <string name="btn_download_later">Download later</string>
    <string name="btn_download_install_later">Download &amp; install later</string>
    <string name="download_later_time">Download later time</string>
    <string name="download_and_install_later_time">Download and install later time</string>
    <string name="install_later_time">Install later time</string>
    <string name="not_allow_with2g">The update of your device is not allowed on 2G network. Please check again with 3G or 4G network or connect to your Wifi</string>
    <string name="netRoaming_content_tip">You are connected to mobile data while roaming, it is recommended to use a Wi-Fi connection. If you start the download using mobile data, additional charges may apply. Would you like to continue?</string>
    <string name="network_roaming">You are roaming.You cannot download new software using mobile data.Please turn on Wi-Fi in Settings.</string>
    <string name="night_down_title">Silent Night Download :</string>
    <string name="night_down_content">This option allows you to download the software updates automatically onto your device during the night. You only have to agree once and all future software updates shall be downloaded automatically. The updates shall only be downloaded
        between 1 A.M and 5 A.M, when the phone has more then 30% of battery and is connected to Wifi.
    </string>
    <string name="night_update_note">Silent Night Download option:</string>
    <string name="night_update_button">Click here to accept</string>
    <string name="setting_night_autodownload">Silent Night Download</string>
</resources>