<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.adups.fota.view.TitleContentView
        android:id="@+id/check_cycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:content="@string/setting_autocheck_hint"
        app:title="@string/setting_autocheck" />

    <com.adups.fota.view.TitleContentView
        android:id="@+id/update_wifi_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:content="@string/setting_only_wifi_hint"
        app:showBox="true"
        app:title="@string/setting_only_wifi" />

    <com.adups.fota.view.TitleContentView
        android:id="@+id/wifi_auto_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:content="@string/setting_autodownload_hint"
        app:showBox="true"
        app:title="@string/setting_autodownload" />

    <com.adups.fota.view.TitleContentView
        android:id="@+id/night_auto_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBox="true"
        app:title="@string/setting_night_autodownload" />

    <com.adups.fota.view.TitleContentView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:title="@string/about_wireless_update" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/download_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/setting_items_height"
        android:paddingEnd="@dimen/default_left_margin"
        android:paddingStart="@dimen/default_left_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/download_later_time"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />


        <TextView
            android:id="@+id/download_later_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="12:50"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />

    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/download_install_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/setting_items_height"
        android:paddingEnd="@dimen/default_left_margin"
        android:paddingStart="@dimen/default_left_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/download_and_install_later_time"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />

        <TextView
            android:id="@+id/download_install_later_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="23:10"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/install_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/setting_items_height"
        android:paddingEnd="@dimen/default_left_margin"
        android:paddingStart="@dimen/default_left_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/install_later_time"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />


        <TextView
            android:id="@+id/install_later_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="15:30"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/common_item_text_size" />
    </RelativeLayout>

</LinearLayout>


