<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/check_la"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/bt_check"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_button_height"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/button_selector"
                android:text="@string/check_now"
                android:textColor="@drawable/button_text_color_selector"
                android:textSize="@dimen/bottom_button_text_size" />
            <TextView
                android:id="@+id/bt_download_later"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_button_height"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/button_selector"
                android:text="@string/btn_download_later"
                android:textColor="@drawable/button_text_color_selector"
                android:textSize="@dimen/bottom_button_text_size"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/bt_download_install"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_button_height"
            android:gravity="center"
            android:background="@drawable/button_selector"
            android:text="@string/btn_download_install_later"
            android:textColor="@drawable/button_text_color_selector"
            android:textSize="@dimen/bottom_button_text_size"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hl_bt_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-0.5dp"
            android:layout_weight="1"

            android:gravity="center">

            <TextView
                android:id="@+id/button_left"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_button_height"
                android:background="@drawable/button_left_selector"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/btn_pause"
                android:textColor="@drawable/button_text_color_selector"
                android:textSize="@dimen/bottom_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/button_right"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_button_height"
                android:background="@drawable/button_right_selector"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/btn_cancel"
                android:textColor="@drawable/button_text_color_selector"
                android:textSize="@dimen/bottom_button_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>