<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_bg_color"
    android:fitsSystemWindows="true">

    <!--头部导航-->
    <include
        android:id="@+id/header"
        layout="@layout/main_header" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:layout_above="@+id/footer_layout"
        android:layout_below="@+id/header">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/title_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|snap">

                <com.adups.fota.view.ProgressLayout
                    android:id="@+id/dialog_progress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/cloud" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/pre_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dialog_ota_update_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_color"
                        android:paddingLeft="10dp"
                        android:paddingTop="16dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:text="@string/upgrade_hint"
                        android:textColor="@color/black_text_color"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/relese_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:textColor="@color/black_text_color"
                            android:paddingTop="16dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/night_update_note"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/night_update_note"
                                android:singleLine="true"
                                android:layout_weight="1"
                                android:textColor="@color/night_text_color"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp" />

                            <Button
                                android:id="@+id/night_update_button"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:text="@string/night_update_button"
                                android:textColor="#FE0A14"
                                android:autoLink="all"
                                android:paddingLeft="5dp"
                                android:textAllCaps="false"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/relese_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ab_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:paddingTop="50dp">

                    <TextView
                        android:id="@+id/battery_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/button_text_normal_color"
                        android:layout_gravity="center" />

                    <LinearLayout
                        android:id="@+id/pro_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/update_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/pro_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp" />
                        </RelativeLayout>

                        <ProgressBar
                            android:id="@+id/progress_update_id"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="6dp"
                            android:layout_marginLeft="5dip"
                            android:layout_marginTop="5dip"
                            android:layout_marginRight="5dip"
                            android:max="100"
                            android:progress="0"
                            android:progressDrawable="@drawable/download_progressbar_style" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--底部按钮-->
    <com.adups.fota.view.FooterLayout
        android:visibility="gone"
        android:id="@+id/dialog_footer_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
